--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -4,6 +4,7 @@
 <% @colony.tasks.each do | task | %>
   <%= link_to task.name, task_path( task.id ) %><br/>
   <%= task.description %><br/>
+  <%= link_to "Assign this task to a user", new_task_user_wizard_path(task_id: task.id) %><br/>
   <%= link_to "destroy", assignment_path(Assignment.where(colony_id:@colony.id, task_id:task.id).first), method: :delete %><hr/>
 <% end %>
 
