--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -8,7 +8,7 @@
        </div>
       <div class="advanced_info">
         <%= cat.bio %><br/>
-        <%= I18n.t 'cats.birthDate'%> <%= cat.birthdate_date %><br/>
+        <%= I18n.t 'cats.birthDate'%> <%= cat.birthday_date %><br/>
         <%= I18n.t 'cats.gender'%> <%= cat.gender %><br/>
         <%= I18n.t 'cats.sterilized'%> <%= cat.sterilized %><br/>
         <% if !cat.abandoned_date.nil?%>
