--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @cat.name %></h1>
 <hr>
 <%= @cat.bio %></br>
-birthday: <%= @cat.birthdate_date %></br>
+birthday: <%= @cat.birthday_date %></br>
 gender: <%= @cat.gender %></br>
 sterilized: <%= @cat.sterilized %></br>
 <% if !(@cat.abandoned_date.nil?) %>
