--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -6,8 +6,8 @@
     <%= f.text_area :bio%>
   </div>
   <div class="field">
-    <%= f.label :birthdate_date %><br>
-    <%= f.date_field :birthdate_date %>
+    <%= f.label :birthday_date %><br>
+    <%= f.date_field :birthday_date %>
   </div>
   <div class="field">
     <%= f.label :gender %><br>
