--- a/app/javascript/bundles/UI/components/Alert/Alert.scss
+++ b/app/javascript/bundles/UI/components/Alert/Alert.scss
@@ -7,23 +7,19 @@
   color: #000000;
 
   &.alert-standard {
-    background-color: #ffffff;
-    border-color: #f2f2f2;
-  }
-  &.alert-sky {
     color: #ffffff;
     border-color: #b8daff;
     background-color: #354093;
   }
-  &.alert-fire {
+  &.alert-error {
     border-color: #b8daff;
     background-color: #e8654d;
   }
-  &.alert-sun {
+  &.alert-warning {
     border-color: #b8daff;
     background-color: #ecbb3b;
   }
-  &.alert-sea {
+  &.alert-succes {
     border-color: #b8daff;
     background-color: #68c1bd;
   }
