Fix border style

--- a/app/javascript/bundles/UI/components/Input/Input.scss
+++ b/app/javascript/bundles/UI/components/Input/Input.scss
@@ -2,6 +2,7 @@
   border-radius: 5px;
   border-width: 2px;
   border-color: #f2f2f2;
+  border-style: solid;
   
   &:focus{
     border-width: 2px;
