--- a/app/javascript/bundles/UI/components/Alert/Alert.scss
+++ b/app/javascript/bundles/UI/components/Alert/Alert.scss
@@ -2,25 +2,25 @@
   position: relative;
   padding: 0.75rem 1.25rem;
   margin-bottom: 1rem;
-  border: 1px solid transparent;
   border-radius: 0.25rem;
   color: #000000;
 
-  &.alert-standard {
+  &.alert-primary {
     color: #ffffff;
+    border: 1px solid transparent;
     border-color: #b8daff;
     background-color: #354093;
   }
-  &.alert-error {
-    border-color: #b8daff;
-    background-color: #e8654d;
+  &.alert-success {
+    background-color: #68c1bd;
   }
   &.alert-warning {
-    border-color: #b8daff;
     background-color: #ecbb3b;
   }
-  &.alert-succes {
-    border-color: #b8daff;
-    background-color: #68c1bd;
+  &.alert-error {
+    background-color: #e8654d;
+  }  
+  &.alert-disabled{
+    background-color: #f2f2f2;
   }
 }
