Added custom size selector to input

--- a/app/javascript/bundles/UI/components/Input/Input.scss
+++ b/app/javascript/bundles/UI/components/Input/Input.scss
@@ -1,9 +1,10 @@
 .input{
-  border-radius: 5px;
+  border-radius: 10px;
   border-width: 2px;
   border-color: #f2f2f2;
   border-style: solid;
-  
+  padding: 0.5em;
+
   &:focus{
     border-width: 2px;
     border-color: #354093;
