--- a/app/javascript/bundles/UI/components/Modal/Modal.scss
+++ b/app/javascript/bundles/UI/components/Modal/Modal.scss
@@ -11,7 +11,7 @@
   border-radius: 25px;
   background-color: #ffffff;
   border: 3px solid;
-  border-color: #DCDCDC;
+  border-color: #dcdcdc;
   vertical-align: middle; 
   text-align: center; 
 }
