Deleted unused var and comment on commented property

--- a/app/javascript/bundles/UI/components/Pagination/Pagination.scss
+++ b/app/javascript/bundles/UI/components/Pagination/Pagination.scss
@@ -7,7 +7,7 @@
 .button {
     position: relative;
     padding: 0.3rem 1rem;
-    // margin-bottom: 1rem;
+    // margin-bottom: 1rem; // Margin bottom existing in issue 127 component
     border: none;
     border-radius: 28px;
     color: #000000;
