--- a/app/javascript/bundles/UI/components/Modal/Modal.scss
+++ b/app/javascript/bundles/UI/components/Modal/Modal.scss
@@ -1,20 +1,30 @@
 .modal {
   padding: 50px;
-  background-color: rgba(104,193,189, 0.9);
-  border: 10px solid;
-  border-color: #08C1BD;
+  background-color: rgba(104, 193, 189, 0.9);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100;
 }
+
 .modal-inner {
-  margin: auto;
+  margin: 0 auto;
   padding: 50px;
-  z-index: 2;
+  z-index: 200;
   border-radius: 25px;
   background-color: #ffffff;
   border: 3px solid;
   border-color: #dcdcdc;
-  text-align: center;
+  width: 60%;
+  margin-top: 4em;
 }
+
 .close-button {
+  position: relative;
+  top: 65px;
+  right: 280px;
+  float: right;
+  z-index: 300;
   float: right;
   margin-top:10px; 
   margin-right:20px; 
