--- a/app/javascript/bundles/UI/components/Modal/Modal.scss
+++ b/app/javascript/bundles/UI/components/Modal/Modal.scss
@@ -1,5 +1,4 @@
 .modal {
-  padding: 50px;
   background-color: rgba(104, 193, 189, 0.9);
   width: 100%;
   height: 100%;
@@ -7,10 +6,21 @@
   z-index: 100;
 }
 
-.modal-inner {
+.modal-header {
+  position: relative;
+  z-index: 400;
+  top: 19%;
+  left: 83%;
+  width: 100%;
+}
+
+.modal-inner { 
+  text-align: center;
+  position: relative;
   margin: 0 auto;
   padding: 50px;
   z-index: 200;
+  align-content: center;
   border-radius: 25px;
   background-color: #ffffff;
   border: 3px solid;
@@ -20,14 +30,7 @@
 }
 
 .close-button {
-  position: relative;
-  top: 65px;
-  right: 280px;
-  float: right;
-  z-index: 300;
-  float: right;
-  margin-top:10px; 
-  margin-right:20px; 
+  cursor: pointer;
   color: #dcdcdc;
   font-size: 28px;
 }
