--- a/app/javascript/bundles/UI/components/ProgressBar/ProgressBar.scss
+++ b/app/javascript/bundles/UI/components/ProgressBar/ProgressBar.scss
@@ -1,37 +1,53 @@
 .progressbar-green{
 	background: rgb(255, 255, 255);
 	border-radius: 50px;
-    padding: 2px;
     -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .progressbar-green[value]::-webkit-progress-bar{
     background-color: white;
     border-radius: 50px;
-    padding: 2px;
+    padding: 1px;
+}
+
+.progressbar-green[value]::-moz-progress-bar{
+    background-color: rgb(108, 193, 188);
+    border-radius: 50px;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .progressbar-green[value]::-webkit-progress-value{
     background-color: rgb(108, 193, 188);
     border-radius: 50px;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .progressbar-blue{
 	background: rgb(255, 255, 255);
 	border-radius: 50px;
-    padding: 2px;
     -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .progressbar-blue[value]::-webkit-progress-bar{
     background-color: white;
     border-radius: 50px;
-    padding: 2px;
+    padding: 1px;
+}
+
+.progressbar-blue[value]::-moz-progress-bar{
+    background-color: rgb(54, 67, 145);
+    border-radius: 50px;
+    border: 1px solid rgb(231, 231, 231);
 }
 
 .progressbar-blue[value]::-webkit-progress-value{
     background-color: rgb(54, 67, 145);
     border-radius: 50px;
+    border: 1px solid rgb(231, 231, 231);
 }
