Added home banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <section id="intro-video">
   <div class="container video-container">
-    <img class="full-width" src="https://placekitten.com/g/800/400" />
+    <img class="full-width" src="/covi_construccion.svg" />
   </div>
 </section>
 <section id ="intro" class="eter-section">
