--- a/app/javascript/bundles/UI/components/Input/Input.scss
+++ b/app/javascript/bundles/UI/components/Input/Input.scss
@@ -15,3 +15,9 @@
     background-color: #f9f9f9;
   }
 }
+
+.input-dark {
+  background: var(--dark-sea);
+  border-color: var(--dark-sea);
+  color: white;
+}
