--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,42 +1,41 @@
-<h2>Sign up</h2>
+<div class="card-header">
+  <h1 class="d-inline-block"><%= t 'users.sign_up' %></h1>
+  <img src="/logo.svg" class="mini-logo"/>
+</div>
+<div class="card-body">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    <div class="row justify-content-between">
+      <div class="col-xs-12 col-lg-6">
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= react_component("Input", props: {dark: true, name: 'user[email]', type: 'email', size:'full-size'}, prerender: false) %>
+        </div>
+        <div class="field">
+          <%= f.label :username %><br />
+          <%= react_component("Input", props: {dark: true, name: 'user[username]', size:'full-size'}, prerender: false) %>
+        </div>
+      </div>
+      <%= f.hidden_field :role, value: :basic %>
+      <%= f.hidden_field :purrs, value: 0 %>
+      <div class="col-xs-12 col-lg-6">
+        <div class="field">
+          <%= f.label :password %>
+          <%= react_component("Input", props: {dark: true, name: 'user[password]', type: 'password', size:'full-size'}, prerender: false) %>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :role %><br />
-    <%= f.select(:role, [['Admin', :admin], ['Volunteer', :volunteer], ['Basic', :basic]], :prompt => 'Select') %>
-
-  </div>
-  <div class="field">
-    <%= f.label :purrs %><br />
-    <%= f.number_field :purrs %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= react_component("Input", props: {dark: true, name: 'user[password_confirmation]', type: 'password', size:'full-size'}, prerender: false) %>
+        </div>
+      </div>
+    </div>
+    <div class="actions">
+      <%= react_component("Button", props: {name: 'user[password_confirmation]', block: true,
+                          transparent: true, type: 'primary', inverted: true, value:'Log in',
+                          target: new_session_path(resource_name)}, prerender: false) %>
+      <%= react_component("Button", props: {name: 'user[password_confirmation]', block: true,
+                          transparent: true, type: 'primary', inverted: true, value:'Sign up'}, prerender: false) %>
+    </div>
+  <% end %>
+</div>
