--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,26 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <%= javascript_pack_tag 'ui-bundle' %>
+    <% if Rails.env.production? %>
+      <%= inline_css 'ui-bundle.css' %>
+    <% else %>
+      <%= stylesheet_pack_tag 'ui-bundle', media: 'all' %>
+    <% end %>
 
+    <%= javascript_pack_tag 'ui-bundle' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="card card-application">
+      <div class="d-flex card-application-container">
+        <%= react_component("Sidebar", props: {links: sidebar_links, username: current_user&.username}, prerender: false) %>
+        <div class="app-container">
+          <img src="/logo.svg" class="mini-logo float-right"/>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
