--- a/app/javascript/bundles/UI/components/RadioButton/RadioButton.scss
+++ b/app/javascript/bundles/UI/components/RadioButton/RadioButton.scss
@@ -1,66 +1,85 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:500,600,700');
 .radiobutton {
+    font-family: 'Raleway', sans-serif;
+    color: rgb(128, 128, 128);
     background-color: #f2f2f2;
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+    display: inline-block;
+    margin-top: 6px;
+    margin-left: 3px;
+    position: absolute;
     cursor: pointer;
-    font-size: 22px;
+    &:not(:first-child){
+        margin-left: 15px;
+    }   
+    @media screen {
+        display: block;
+        float: none;
+        &:not(:first-child) {
+            margin-left: 0;
+            margin-top: 25px;
+        }
+    }
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
 } 
 
-.check{
-    display: block;
-    position: absolute;
-    border: 5px solid #AAAAAA;
-    border-radius: 100%;
-    height: 25px;
-    width: 25px;
-    top: 30px;
-    left: 20px;
-      z-index: 5;
-      transition: border .25s linear;
-      -webkit-transition: border .25s linear;
-}
-
-.check::before {
-    display: block;
-    position: absolute;
-    content: '';
-    border-radius: 100%;
-    height: 15px;
-    width: 15px;
-    top: 5px;
-    left: 5px;
-    margin: auto;
-    transition: background 0.25s linear;
-    -webkit-transition: background 0.25s linear;
-}
 
 label{
-    display: block;
+    font-family: 'Raleway', sans-serif;
+    display: inline-block;
     position: relative;
     font-weight: 300;
     font-size: 1.35em;
-    padding: 25px 25px 25px 80px;
-    margin: 10px auto;
+    padding-left: 15px;
     height: 30px;
     z-index: 9;
-    cursor: pointer;
+    color: rgb(128, 128, 128);
+    cursor: default;
     -webkit-transition: all 0.25s linear;
 }
-  
-.radiobutton:checked ~ .check {
-    border: 5px solid #0DFF92;
-  }
-  
-.radiobutton:checked ~ .check::before{
-    background: #0DFF92;
-  }
-  
-.radiobutton:checked ~ label{
-    color: #0DFF92;
-  }
+
+span {
+    display: block;
+    position: relative;
+    white-space: nowrap;
+    align-content: center;
+}
+
+input {
+    display: none;
+    opacity: 0;
+    &:checked + svg {
+        path {
+            transition: all .4s ease;
+            &.inner {
+                stroke-dashoffset: 38;
+                transition-delay: .3s;
+            }
+            &.outer {
+                stroke-dashoffset: 0;
+            }
+        }
+    }
+}
+
+svg {
+    fill: none;
+    vertical-align: -3px;
+    circle {
+        stroke-width: 2;
+        stroke: #C8CCD4;
+    }
+    path {
+        stroke: #69BFBA;
+        &.inner {
+            stroke-width: 6;
+            stroke-dasharray: 19;
+            stroke-dashoffset: 19;
+        }
+        &.outer {
+            stroke-width: 2;
+            stroke-dasharray: 57;
+            stroke-dashoffset: 57;
+        }
+    }
+}
