--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
         <div class="app-container">
           <img src="/logo.svg" class="mini-logo float-right"/>
           <%= yield %>
+          <div class="pb-4 pt-4 w-100 clearfix"></div>
         </div>
       </div>
     </div>
