--- a/app/javascript/bundles/UI/components/Card/Card.scss
+++ b/app/javascript/bundles/UI/components/Card/Card.scss
@@ -4,6 +4,7 @@
   padding: 1em;
   background-color: var(--eter);
   font-weight: bold;
+  margin-bottom: 1em;
 }
 
 .card-header, .card-footer {
@@ -24,4 +25,5 @@
 
 .card-footer {
   color: var(--sea);
+  text-align: right;
 }
