--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,10 +1,13 @@
 
-<div class="col-xs-12 col-lg-8 float-left">
+<div class="col-xs-12 col-xl-8 float-left">
 <div class="d-flex mb-4">
     <div class="mr-4"><%= react_component("Avatar", props: {src: @cat.avatar, size: 'bg'}, prerender: false) %></div>
     <div>
-        <h1><%= @cat.name %></h1>
-        <%= react_component("Tag", props: {type: 'success', children: 'Sterilized'}, prerender: false) if @cat.sterilized %>
+        <h1>
+            <%= @cat.name %>
+            <%= react_component("Tag", props: {type: 'success', children: 'Sterilized'},
+                                html_options: {style: 'display: inline-block; margin-left: 0.5em; ',
+                                prerender: false}) if @cat.sterilized %></h1>
         <%= time_ago_in_words @cat.birthday_date %></br>
         <% if !(@cat.abandoned_date.nil?) %>
             Abandonado/a hace <%= time_ago_in_words @cat.abandoned_date %></br>
@@ -15,11 +18,15 @@
 <p><%= @cat.bio %></p>
 
 <h2>Health</h2>
+  <% if @cat.sufferings.count > 0 %>
     <% @cat.sufferings.each do |condition| %>
         <%= react_component("Card", props: {title: condition.illness.name, body: 'Diagnosed on ' + condition.diagnosis_date.to_s, footerLink: suffering_path(condition), footer: 'Review'}, class:'card', prerender: false) %>
     <% end %>
+  <% else %>
+    <p>It's all good! <%= @cat.name %> has never looked as good as now.</p>
+  <% end %>
 </div>
-<div class="col-xs-12 col-lg-4 float-right">
+<div class="col-xs-12 col-xl-4 float-right">
     <%= react_component("Card", props: {title: @cat.colony.name, link: colony_path(@cat.colony), image: @cat.avatar, center: true}, class:'card', prerender: false) %>
 </div>
 
