Updated heroku scripts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,700|Zilla+Slab:400,600i,700');
-@import url("colors.scss");
+@import url("colors");
 
 body {
 	background: var(--shadow);
