--- a/app/views/layouts/registrations.html.erb
+++ b/app/views/layouts/registrations.html.erb
@@ -5,13 +5,8 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <% if Rails.env.production? %>
-      <%= inline_css 'ui-bundle.css' %>
-    <% else %>
-      <%= stylesheet_pack_tag 'ui-bundle', media: 'all' %>
-    <% end %>
-
-    <%= javascript_pack_tag 'ui-bundle', 'data-turbolinks-track': true, defer: true %>
+    <%= stylesheet_pack_tag 'ui-bundle', media: 'all' %>
+    <%= javascript_pack_tag 'ui-bundle' %>
     <%= stylesheet_link_tag    'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
