added targets to new task and new cat button

--- a/app/views/colonies/show.html.erb
+++ b/app/views/colonies/show.html.erb
@@ -3,14 +3,14 @@
 <br/>
 Tasks
 <%=react_component('Tag', props: {type: 'error', children: '1' })%>
-<%=react_component('Button', props: {type: 'success', value: "New task" })%>
+<%=react_component('Button', props: {type: 'success', value: 'New task', target: new_task_path })%>
 <% @colony.tasks.each do | task | %>
   <%= react_component("Card", props: {title: task.name, body: task.description, link: task_path(task), footer: "assigned to"}, class:'card', prerender: false) %>
 <% end %>
 
 Cats
 <%=react_component('Tag', props: {type: 'error', children: '1' })%>
-<%=react_component('Button', props: {type: 'success', value: "New cat" })%>
+<%=react_component('Button', props: {type: 'success', value: "New cat", target: new_cat_path })%>
 <div class="card-columns">
   <% @colony.cats.each do |cat| %>
     <%= react_component('Card', props: {title: cat.name, link: cat_path(cat), image: avatar_tag(cat), footer: 'Manage'}, class:'card', prerender: false) %>
